--- a/css/styles.css
+++ b/css/styles.css
@@ -10,14 +10,16 @@ body{
     background-color: #ffffff;
     color:#2E2F42;
     font-weight: 500;
+    letter-spacing: 0.02em;
 }
 
-.my-contacts{
+.my-contacts-list{
     font-size: 16px;
     line-height: 1.5;
     background-color: #ffffff;
     color: #434455;
     font-weight: 400;
+    font-style: normal;
 }
 .main-head{
     font-size: 56px;
@@ -69,10 +71,19 @@ body{
     color: #434455;
     font-weight: 400;
 }
-.description{
+.description {
     font-size: 16px;
     line-height: 1.5;
     background-color: #2E2F42;
     color: #F4F4FD;
     font-weight: 400;
+}
+.header-main-logo{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4D5AE5;
 }
