--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@ body{
     background-color: #2E2F42;
     color: #F4F4FD;
     font-weight: 400;
+    letter-spacing: 0.02em;
 }
 .header-main-logo{
     font-family: 'Raleway', sans-serif;
@@ -86,4 +87,17 @@ body{
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4D5AE5;
+}
+
+.footer-main-logo{
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4D5AE5;
+}
+.name-of-logo{
+    color: #F4F4FD;
 }
