--- a/css/styles.css
+++ b/css/styles.css
@@ -21,20 +21,24 @@ body{
     font-weight: 400;
     font-style: normal;
 }
-.main-head{
+.main-head-name{
     font-size: 56px;
-    line-height: 2.14;
+    line-height: 1.07;
     background-color: #2E2F42;
     color: #ffffff;
     font-weight: 700;
+    text-align: center;
+    letter-spacing: 0.02em;
 }
 .button{
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     line-height: 1.5;
     background-color: #4D5AE5;
     color: #ffffff;
     font-weight: 500;
     cursor: pointer;
+    letter-spacing: 0.04em;
 }
 .head-of-benefits{
     font-size: 20px;
@@ -42,13 +46,15 @@ body{
     background-color: #ffffff;
     color: #2E2F42;
     font-weight: 500;
+    letter-spacing: 0.02em;
 }
 .benefits{
     font-size: 16px;
-    line-height: 4.5;
+    line-height: 1.5;
     background-color: #ffffff;
     color: #434455;
     font-weight: 400;
+    letter-spacing: 0.02em;
 }
 .our-team-members{
     font-size: 36px;
