--- a/css/styles.css
+++ b/css/styles.css
@@ -99,13 +99,23 @@ body{
     letter-spacing: 0.02em;
 }
 .our-team-portfolio{
-
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: #2E2F42
 }
 .team-apps-name{
-
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
 }
 .team-apps-description{
-    
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 .footer-main-logo{
     font-family: 'Raleway', sans-serif;
