--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,10 @@ body{
     color: #434455;
     background-color: #ffffff;
 }
+
+.definition-of-company{
+    color: #2E2F42;
+}
 .header-main-logo {
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
@@ -20,8 +24,6 @@ body{
     font-weight: 500;
     letter-spacing: 0.02em;
     letter-spacing: 0.02em;
-    color: #434455;
-    
 }
 
 .my-contacts-list{
