--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,8 @@ body{
     font-weight: 500;
     cursor: pointer;
     letter-spacing: 0.04em;
+    link:hover: #404BBF;
+    link:focus: #404BBF;
 }
 .head-of-benefits{
     font-size: 20px;
