--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,18 @@ body{
     text-transform: uppercase;
     color: #4D5AE5;
 }
+
+.link-of-studio{
+    letter-spacing: 0.02em;
+    color: #434455;
+    
+}
+.link-of-studio:hover{
+    color: #404BBF
+}
+.link-of-studio:focus{
+    color: #404BBF
+}
 .list-of-definitions{
     font-size: 16px;
     line-height: 1.5;
@@ -56,7 +68,10 @@ body{
     cursor: pointer;
     letter-spacing: 0.04em;
 }
-.button:hover, .button:focus{
+.button:hover {
+    color: #404BBF;
+}
+.button:focus{
     color: #404BBF;
 }
 .head-of-benefits{
