--- a/css/styles.css
+++ b/css/styles.css
@@ -25,10 +25,10 @@ body{
     letter-spacing: 0.02em;
     letter-spacing: 0.02em;
 }
-.list-of-definitions link:hover{
+.link:hover{
     color: #404BBF;
 }
-.list-of-definitions link:focus{
+.link:focus{
     color: #404BBF;
 }
 .my-contacts-list{
