--- a/css/styles.css
+++ b/css/styles.css
@@ -24,10 +24,10 @@ body{
     font-weight: 500;
     letter-spacing: 0.02em;
 }
-.link-of-definitons:hover{
+.list-of-definitions .link-of-definitions:hover{
     color: #404BBF;
 }
-.link-of-definitions:focus{
+.list-of-definitions .link-of-definitions:focus{
     color: #404BBF;
 }
 .my-contacts-list{
