--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@ body{
     font-family: 'Roboto', sans-serif;
     color: #434455;
     background-color: #ffffff;
+    text-decoration: none;
+    list-style:none;
 }
 .definition-of-company{
     color: #2E2F42;
