--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,28 @@ body{
     text-decoration: none;
     list-style:none;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+}
+
+ul,
+ol {
+    margin: 0;
+    padding: 0;
+}
+.container {
+    max-width: 1158px;
+    padding-left: 0;
+    padding-right: 15px;
+    margin-left: 0;
+    margin-right: auto;
+}
 .definition-of-company{
     color: #2E2F42;
 }
