--- a/css/styles.css
+++ b/css/styles.css
@@ -78,7 +78,8 @@ img {
 .section-of-contacts{
     display: flex;
     gap: 40px;
-    padding: 24px 0;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 .adress-container-box{
     display: flex;
@@ -170,6 +171,7 @@ img {
 }
 .list-of-members{
     background-color: #ffffff;
+    border-radius: 0px 0px 4px 4px;
 }
 .staff-container-box{
     display: flex;
@@ -185,6 +187,10 @@ img {
     background-color: #F4F4FD;
     color: #2E2F42;
     font-weight: 700;
+}
+.ark-guerrero-box{
+    padding: 32px 0;
+    
 }
 .team-members-name{
     font-size: 20px;
