--- a/css/styles.css
+++ b/css/styles.css
@@ -76,11 +76,10 @@ img {
     font-weight: 500;
     letter-spacing: 0.02em;
     padding: 24px 0;
-    display: flex;
-    justify-content: space-between;
 }
 .link-of-definitions{
     color: #2E2F42;
+    padding: 24px 0;
 
 }
 .list-of-definitions .link-of-definitions:hover{
