--- a/css/styles.css
+++ b/css/styles.css
@@ -124,29 +124,28 @@ a.link{
     padding: 188px 0;
 }
 .main-head-name{
-    max-width: 496px;
     font-size: 56px;
-    line-height: 1.07;
-    background-color: #2E2F42;
-    color: #ffffff;
-    font-weight: 700;
-    text-align: center;
     letter-spacing: 0.02em;
+    text-align: center;
+    line-height: 1.07;
+    color: #ffffff;
+    margin: 0 auto 48px auto;
+    max-width: 496px;
 }
 .button{
-    border-radius: 4px;
-    border: none;
-    height: 56px;
-    min-width: 169px;
-    display: block;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
-    background-color: #4D5AE5;
-    color: #ffffff;
-    font-weight: 500;
-    cursor: pointer;
-    letter-spacing: 0.04em;
+    color: white;
+        background-color: #4D5AE5;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.04em;
+        cursor: pointer;
+        padding: 16px 32px;
+        border: 0;
+        border-radius: 4px;
+        min-width: 169px;
+        display: block;
+        margin: 0 auto;
 }
 .button:hover {
     background-color: #404BBF;
