--- a/css/styles.css
+++ b/css/styles.css
@@ -2,19 +2,18 @@ body{
     font-family: 'Roboto', sans-serif;
     color: #434455;
     background-color: #ffffff;
-    text-decoration: none;
-    list-style:none;
 }
+
 h1,
 h2,
 h3,
 h4,
-h5,
-h6,
 p {
     margin: 0;
 }
-
+.section{
+    padding: 120px 0;
+}
 ul,
 ol {
     margin: 0;
@@ -26,8 +25,6 @@ ol {
 }
 img {
     display: block;
-    width: 100%;
-    height: auto;
 }
 .visually-hidden {
     position: absolute;
@@ -41,24 +38,29 @@ img {
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding-left: 0;
+}
 .header-container-box{
     border-bottom: 1px solid #e7e9fc;
-    display: block;
-    unicode-bidi: isolate;
+}
+.a{
+    text-decoration: none;
+    color: currentColor;
 }
 .nav-container-box{
     display: flex;
-    gap: 40px;
     align-items: center;
 }
 .end-of-page .description{
     max-width: 264px;
 }
-.adress-contacts-box{
+.address-contacts-box{
     display: flex;
     font-style: normal;
     unicode-bidi: isolate;
-    list-style-type: none;
     gap: 40px;
     font-size: 16px;
     line-height: 1.5;
@@ -71,11 +73,10 @@ img {
 .container {
     max-width: 1158px;
     padding: 0 15px;
-    margin: auto;
+    margin: 0 auto;
 }
 .definition-of-company{
     color: #2E2F42;
-    margin-right: 76px;
 }
 .header-main-logo {
     font-family: 'Raleway', sans-serif;
@@ -101,35 +102,47 @@ img {
     padding: 24px 0;
 
 }
-.list-of-definitions .link-of-definitions:hover{
+.section-of-contacts .list-of-definitions:active,
+.section-of-contacts .list-of-definitions:hover,
+.section-of-contacts .list-of-definitions:focus{
     color: #404BBF;
 }
-.list-of-definitions .link-of-definitions:focus{
-    color: #404BBF;
-}
+
 .section-of-contacts{
     display: flex;
     gap: 40px;
-    padding-top: 24px;
-    padding-bottom: 24px;
-    list-style-type: none;
+}
+.section-of-contacts .list-of-definitions{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    padding: 24px 0;
 }
 a.link{
     text-decoration: none;
 }
-.adress-container-box {
+.address-container-box {
     display: flex;
     gap: 40px;
-    list-style-type: none;
+    font-style: normal;
+    padding: 24px 0;
 }
 .contacts-of-company {
     color: #434455;
     letter-spacing: 0.02em;
 }
-.contacts-of-company:hover {
-    color: #404BBF;
+.address-container-box .contacts-of-company{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
 }
-.contacts-of-company:focus {
+.address-contacts-box .contacts-of-company:hover,
+.address-contacts-box .contacts-of-company:active,
+.address-contacts-box .contacts-of-company:focus{
     color: #404BBF;
 }
 .fon-main-head{
@@ -166,10 +179,12 @@ a.link{
 .button:focus {
     background-color: #404BBF;
 }
+.benefits-container-box .head-of-benefits{
+    margin-bottom: 8px;
+}
 .benefits-list-box{
     display: flex;
     gap: 24px;
-    list-style-type: none;
 }
 .list-benefits-item{
     width: calc((100% - 72px) / 4);
@@ -195,51 +210,49 @@ a.link{
     letter-spacing: 0.02em;
 }
 .members-team-fon{
-    padding: 120px 0;
     background-color: #F4F4FD;
+}
+.members-team-fon .our-team-members{
+    margin-bottom: 72px;
 }
 .list-of-members{
     background-color: #ffffff;
     border-radius: 0px 0px 4px 4px;
-    width: 342px;
+    width: calc((100% - 72px) / 4);
 }
 .staff-container-box{
     display: flex;
     gap: 24px;
-    list-style-type: none;
 }
 .our-team-members{
-    margin-bottom: 72px;
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
-    background-color: #F4F4FD;
     color: #2E2F42;
-    font-weight: 700;
+    margin-bottom: 8px;
+}
+.members-team-fon .team-members-name{
+    margin-bottom: 8px;
 }
 .name-position-box{
     padding: 32px 0;
+    text-align: center;
+    width: 264px;
 }
 .team-members-name{
-    margin-bottom: 8px;
-    text-align: center;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    background-color: #ffffff;
     color: #2E2F42;
     font-weight: 500;
 }
 .team-member-position{
-    text-align: center;
     font-size: 16px;
     line-height: 1.5;
-    background-color: #ffffff;
-    color: #434455;
-    font-weight: 400;
     letter-spacing: 0.02em;
+    color: #434455;
 }
 .description {
     font-size: 16px;
@@ -248,10 +261,11 @@ a.link{
     letter-spacing: 0.02em;
     
 }
-.production-container-box{
-    padding-top: 120px;
-    padding-bottom: 120px;
+
+.production-container-box .our-team-portfolio{
+    margin-bottom: 72px;
 }
+
 .our-team-portfolio{
     font-size: 36px;
     line-height: 1.11;
@@ -266,7 +280,7 @@ a.link{
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
-    list-style-type: none;
+    justify-content: space-between;
 }
 .team-apps-name{
     margin-bottom: 8px;
@@ -288,11 +302,21 @@ a.link{
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
-
+}
+.name-type-app .team-apps-name{
+    margin-bottom: 8px;
 }
 .end-of-page{
     background-color: #2E2F42;
     padding: 100px 0;
+}
+.end-of-page .description{
+    color: #F4F4FD;
+    max-width: 264px;
+}
+.end-of-page .footer-main-logo{
+    display: inline-block;
+    margin-bottom: 16px;
 }
 .footer-main-logo{
     font-family: 'Raleway', sans-serif;
