--- a/css/styles.css
+++ b/css/styles.css
@@ -180,7 +180,7 @@ a.link{
     min-width: 169px;
     display: block;
     margin: 0 auto;
-    background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button:hover {
     background-color: #404BBF;
@@ -340,6 +340,25 @@ a.link{
     color: #4D5AE5; 
     margin-bottom: 16px;
     display: inline-block;
+}
+.social-media-container{
+    display: flex;
+    align-items: baseline;
+    margin-right: 120px;
+}
+.social-media-p{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: ##FFFFFF;
+    margin-bottom: 16px;
+
+}
+.list-of-sm{
+    display: flex;
+    gap: 16px;
+    
 }
 .a {
     display: inline-block;
