--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,19 @@ a {
     text-transform: uppercase;
     color: #4D5AE5;
     margin-right: 76px;
+    position: relative;
+    color: #404bbf;
+}
+.header-main-logo::after{
+    content: ;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .list-of-definitions{
     font-size: 16px;
