--- a/css/styles.css
+++ b/css/styles.css
@@ -354,24 +354,47 @@ a.link{
     margin-bottom: 16px;
     display: inline-block;
 }
+.footer-fist-element{
+    margin-right: 120px;
+}
 .social-media-container{
     display: flex;
     align-items: baseline;
-    margin-right: 120px;
+    margin-right: 80px;
 }
 .social-media-p{
     font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: ##FFFFFF;
-    margin-bottom: 16px;
-
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #fff;
+        margin-bottom: 16px;
+margin-right: 540px;
 }
 .list-of-sm{
     display: flex;
     gap: 16px;
-    
+}
+.sm-list-footer{
+    width: 40px;
+    height: 40;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-social-item-link{
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.footer-social-item-link:hover,
+.footer-social-item-link:focus{
+    background-color: #31d0aa;
+}
+.icons-footer-social{
+    fill: #f4f4fd;
 }
 .a {
     display: inline-block;
