--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,7 @@ position: relative;
 color: #404bbf;
 }
 .firstlink-of-definitions::after{
-    content: ;
+    content: "";
     width: 100%;
     position: absolute;
     left: 0;
@@ -311,6 +311,9 @@ a.link{
     row-gap: 48px;
     justify-content: space-between;
 }
+..list-of-production:hover{
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 .team-apps-name{
     margin-bottom: 8px;
     font-weight: 500;
@@ -323,9 +326,30 @@ a.link{
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
+.team-apps-description:hover{
+    transform: translateY(0%);
+}
+.img-app-list{
+    position: relative;
+    overflow: hidden;
+}
+.all-apps-description{
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: ##f4f4fd;
+    padding: 40px 32px;
+    background-color: #4d5ae5;
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .name-app-container{
     width: calc((100% - 48px) / 3);
-    
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .name-type-app{
     padding: 32px 16px;
@@ -381,7 +405,7 @@ a.link{
 }
 .sm-list-footer{
     width: 40px;
-    height: 40;
+    height: 40px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-social-item-link{
