--- a/css/styles.css
+++ b/css/styles.css
@@ -215,6 +215,16 @@ a.link{
 .list-benefits-item{
     width: calc((100% - 72px) / 4);
 }
+.image-of-benefits{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
+}
 .benefits-container-box{
     padding: 120px 0;
 }
