--- a/css/styles.css
+++ b/css/styles.css
@@ -152,6 +152,7 @@ a.link{
 .contacts-of-company {
     color: #434455;
     letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-container-box .contacts-of-company{
     font-weight: 400;
