--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,10 @@ a {
     position: relative;
     color: #404bbf;
 }
-
+.firstlink-of-definitions{
+position: relative;
+color: #404bbf;
+}
 .firstlink-of-definitions::after{
     content: "";
     width: 100%;
