--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,7 @@ a {
 .firstlink-of-definitions{
 position: relative;
 color: #404bbf;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .firstlink-of-definitions::after{
     content: "";
@@ -284,6 +285,10 @@ a.link{
     background-color: #ffffff;
     border-radius: 0px 0px 4px 4px;
     width: calc((100% - 72px) / 4);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .staff-container-box{
     display: flex;
@@ -370,6 +375,7 @@ a.link{
 .img-app-list{
     position: relative;
     overflow: hidden;
+    transform: translateY(100%);
 }
 .all-apps-description{
     position: absolute;
@@ -385,9 +391,13 @@ a.link{
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.all-apps-description:hover{
+    transform: translateY(0%);
+}
 .name-app-container{
     width: calc((100% - 48px) / 3);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .name-type-app{
     padding: 32px 16px;
@@ -437,8 +447,8 @@ a.link{
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #fff;
-    margin-bottom: 16px;
     margin-right: 540px;
+    margin-bottom: 16px;
 }
 .list-of-sm{
     display: flex;
