--- a/css/styles.css
+++ b/css/styles.css
@@ -269,6 +269,7 @@ a.link{
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .sm-item-link:hover,
 .sm-item-link:focus{
@@ -353,6 +354,7 @@ a.link{
     column-gap: 24px;
     row-gap: 48px;
     justify-content: space-between;
+    transform: translateY(0%);
 }
 .list-of-production:hover{
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
