--- a/css/styles.css
+++ b/css/styles.css
@@ -401,6 +401,9 @@ a.link{
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+.name-app-container:hover{
+    transform: translateY(0%);
+}
 .name-type-app{
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
@@ -450,7 +453,7 @@ a.link{
     letter-spacing: 0.02em;
     color: #fff;
     margin-right: 540px;
-    margin-bottom: 16px;
+        margin-bottom: 16px;
 }
 .list-of-sm{
     display: flex;
@@ -469,6 +472,7 @@ a.link{
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-social-item-link:hover,
 .footer-social-item-link:focus{
