--- a/css/styles.css
+++ b/css/styles.css
@@ -379,6 +379,9 @@ a.link{
     overflow: hidden;
     transform: translateY(100%);
 }
+.img-app-list:hover .all-apps-description{
+    transform: translateY(100%);
+}
 .all-apps-description{
     position: absolute;
     top: 0;
@@ -390,6 +393,7 @@ a.link{
     background-color: #4d5ae5;
     height: 100%;
     width: 100%;
+
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
