--- a/css/styles.css
+++ b/css/styles.css
@@ -371,9 +371,6 @@ a.link{
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
-.team-apps-description:hover{
-    transform: translateY(0%);
-}
 .img-app-list{
     position: relative;
     overflow: hidden;
@@ -405,7 +402,7 @@ a.link{
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-.name-app-container:hover{
+.name-app-container:hover .apps-overlay-text{
     transform: translateY(0%);
 }
 .name-type-app{
