--- a/css/styles.css
+++ b/css/styles.css
@@ -445,6 +445,9 @@ a.link{
     color: #fff;
     margin-bottom: 16px;
 }
+.social-media-paragraph{
+    
+}
 .list-of-sm{
     display: flex;
     gap: 16px;
