--- a/css/styles.css
+++ b/css/styles.css
@@ -391,6 +391,7 @@ a.link{
     height: 100%;
     width: 100%;
     transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .all-apps-description:hover{
     transform: translateY(0%);
@@ -446,7 +447,7 @@ a.link{
     margin-bottom: 16px;
 }
 .social-media-paragraph{
-    
+
 }
 .list-of-sm{
     display: flex;
