--- a/css/styles.css
+++ b/css/styles.css
@@ -379,16 +379,18 @@ a.link{
     transform: translateY(100%);
 }
 .apps-overlay-text{
-    position: absolute;
+position: absolute;
     top: 0;
-    font-size: 16px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    color: #f4f4fd;
+    background-color: #4d5ae5;
+    padding: 40px 32px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #f4f4fd;
-    padding: 40px 32px;
-    background-color: #4d5ae5;
-    height: 100%;
-    width: 100%;
+    font-size: 16px;
+
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
