--- a/css/styles.css
+++ b/css/styles.css
@@ -377,9 +377,10 @@ a.link{
     background-color: #4d5ae5;
     height: 100%;
     width: 100%;
-
-    transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.apps-overlay-text{
+    transform: translateY(100%);
 }
 .team-apps-description{
     line-height: 1.5;
