--- a/css/styles.css
+++ b/css/styles.css
@@ -379,6 +379,13 @@ a.link{
     width: 100%;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transform: translateY(100%);
+        /* Перемещение элемента вниз на 100% его высоты */
+        transition: transform 0.3s ease;
+        /* Плавный переход для анимации */
+        position: absolute;
+        /* Позиционирование относительно родительского контейнера */
+        bottom: 0;
+        /* Привязка к нижней части родительского контейнера */
 }
 .team-apps-description{
     line-height: 1.5;
