--- a/css/styles.css
+++ b/css/styles.css
@@ -175,6 +175,7 @@ a.link{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    margin: 0 auto;
 }
 .main-head-name{
     font-size: 56px;
@@ -355,9 +356,6 @@ a.link{
     row-gap: 48px;
     justify-content: space-between;
     transform: translateY(0%);
-}
-.list-of-production:hover{
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .team-apps-name{
     margin-bottom: 8px;
