--- a/css/styles.css
+++ b/css/styles.css
@@ -255,7 +255,6 @@ a.link{
     display: flex;
     justify-content: center;
     gap: 24px;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .sm-item-list{
     width: 40px;
@@ -312,6 +311,7 @@ a.link{
     padding: 32px 0;
     text-align: center;
     width: 264px;
+    gap: 8px;
 }
 .team-members-name{
     font-size: 20px;
