--- a/css/styles.css
+++ b/css/styles.css
@@ -93,12 +93,12 @@ a {
     position: relative;
     color: #404bbf;
 }
-.firstlink-of-definitions{
+.nav-container-box a.current{
 position: relative;
 color: #404bbf;
 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.firstlink-of-definitions::after{
+.nav-container-box a.current::after{
     content: "";
     width: 100%;
     position: absolute;
@@ -248,13 +248,11 @@ a.link{
     font-weight: 400;
     letter-spacing: 0.02em;
 }
-.images-members-description{
-    padding: 32px 0;
-}
 .member-sm-list{
     display: flex;
-    justify-content: center;
-    gap: 24px;
+        gap: 24px;
+        justify-content: center;
+        align-items: center;
 }
 .sm-item-list{
     width: 40px;
@@ -311,7 +309,7 @@ a.link{
     padding: 32px 0;
     text-align: center;
     width: 264px;
-    gap: 8px;
+    gap: 32px;
 }
 .team-members-name{
     font-size: 20px;
@@ -321,10 +319,11 @@ a.link{
     font-weight: 500;
 }
 .team-member-position{
-    font-size: 16px;
+font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    margin-bottom: 8px;
 }
 .description {
     font-size: 16px;
