--- a/css/styles.css
+++ b/css/styles.css
@@ -93,12 +93,12 @@ a {
     position: relative;
     color: #404bbf;
 }
-.nav-container-box a.current{
+.link-of-definitions.current{
 position: relative;
 color: #404bbf;
 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.nav-container-box a.current::after{
+.link-of-definitions.current::after{
     content: "";
     width: 100%;
     position: absolute;
