--- a/css/styles.css
+++ b/css/styles.css
@@ -611,3 +611,10 @@ font-size: 16px;
 .input-form:focus{
     border-color: #4D5AE5;
 }
+.close-button{
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.close-button:hover,
+.close-button:focus{
+    fill: #ffffff;
+}
