--- a/css/styles.css
+++ b/css/styles.css
@@ -575,6 +575,10 @@ font-size: 16px;
     border: none;
     background-color: #404bbf;
 }
+.button-form:focus,
+.button-form:hover{
+    fill: #ffffff
+}
 .mod-paragraph{
     font-weight: 500;
     font-size: 16px;
@@ -613,8 +617,4 @@ font-size: 16px;
 }
 .close-button{
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.close-button:hover,
-.close-button:focus{
-    fill: #ffffff;
 }
