--- a/css/styles.css
+++ b/css/styles.css
@@ -614,7 +614,15 @@ font-size: 16px;
 }
 .input-form:focus{
     border-color: #4D5AE5;
+    fill: #4D5AE5;
 }
 .close-button{
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.person-icon{
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
