--- a/css/styles.css
+++ b/css/styles.css
@@ -687,8 +687,12 @@ font-size: 16px;
 .comments-form{
     margin-bottom: 16px;
 }
-..form-input-checked:checked .privacy .span-privacy{
+.form-input-checked:checked .privacy .span-privacy{
     background-color: #404bbf;
     border: none;
     fill: #f4f4fd;
+}
+.input-form:hover,
+.input-form:focus-within {
+    border-color: #4d5ae5;
 }
