--- a/css/styles.css
+++ b/css/styles.css
@@ -612,12 +612,13 @@ font-size: 16px;
     outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.inputvh:checked .span-privacy{
+.check-box input:checked{
     background-color: #404bbf;
     border: none;
     fill: #F4F4FD;
 }
 .input-form:focus .person-icon{
+    border-color: #4D5AE5;
     fill: #4D5AE5;
 }
 .close-button{
