--- a/css/styles.css
+++ b/css/styles.css
@@ -617,7 +617,7 @@ font-size: 16px;
     border: none;
     fill: #F4F4FD;
 }
-.input-form:focus .person-icon{
+.input-form:focus {
     border-color: #4D5AE5;
     fill: #4D5AE5;
 }
