--- a/css/styles.css
+++ b/css/styles.css
@@ -621,6 +621,10 @@ font-size: 16px;
     border-color: #4D5AE5;
     fill: #4D5AE5;
 }
+.input-form:focus + .person-icon{
+    fill: #4D5AE5;
+}
+
 .close-button{
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
