--- a/css/styles.css
+++ b/css/styles.css
@@ -669,12 +669,15 @@ font-size: 16px;
 .span-privacy{
     width: 16px;
     height: 16px;
-    border: 1px solid #2e2f4266;
     border-radius: 2px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: inline-flex;
     align-items: center;
     justify-content: center;
+    fill: transparent;
+}
+.span-privacy{
+    border: 1px solid rgba(46, 47, 66, 0.4);
     fill: transparent;
 }
 .policy-file{
