--- a/css/styles.css
+++ b/css/styles.css
@@ -437,11 +437,14 @@ font-size: 16px;
 }
 .social-media-paragraph{
     font-weight: 500;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #fff;
-        margin-bottom: 16px;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
+}
+.social-media-container{
+    margin-right: 80px;
 }
 .list-of-sm{
     display: flex;
@@ -481,12 +484,11 @@ font-size: 16px;
 }
 
 .text-form-box {
-    margin-bottom: 16px;
     font-weight: 500;
-    font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #ffffff;
+    color: #fff;
+    margin-bottom: 16px;
 }
 
 .formbox{
@@ -515,19 +517,18 @@ font-size: 16px;
 .button-form-type {
     min-width: 165px;
     height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
+    color: white;
+    cursor: pointer;
+    background-color: #4d5ae5;
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    color: #ffffff;
-    cursor: pointer;
-    background-color: #4D5AE5;
-    border: none;
     border-radius: 4px;
+    border: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-form-type:hover, .button-form-type:focus{
     background-color: #404BBF;
@@ -642,7 +643,7 @@ font-size: 16px;
     top: 50%;
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    color: #4D5AE5;
+    color: #2E2F42;
 }
 .text-area{
     width: 100%;
@@ -674,13 +675,15 @@ font-size: 16px;
 .span-privacy{
     width: 16px;
     height: 16px;
-    border-radius: 2px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: inline-flex;
     align-items: center;
     justify-content: center;
     fill: transparent;
-    border: 1px solid rgba(46, 47, 66, 0.4);
+    border: 1px solid #2e2f4266;
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .policy-file{
     color: #4d5ae5; 
